app/globals.css
@import "tailwindcss";

@theme {
  --color-rust-red: #bf3707;
  --color-maroon: #701416;
  --color-grey: #585858;
  --color-sky-blue: #98c0da;
  --color-mustard: #f3c15e;
  --color-cream: #f3dfc4;
  --color-light-mustard: #fff2d9;
}

body {
  font-family: var(--font-figtree);
}

h1 {
  font-size: 3rem; /* 48px */
  font-weight: 700;
  line-height: 1.2;
}

h2 {
  font-size: 2rem; /* 32px */
  font-weight: 700;
  line-height: 1.25;
}

h3 {
  font-size: 1.5rem; /* 24px */
  font-weight: 600;
  line-height: 1.3;
}

h4 {
  font-size: 1.375rem; /* 22px */
  font-weight: 600;
  line-height: 1.35;
}

h5 {
  font-size: 1.125rem; /* 18px */
  font-weight: 500;
  line-height: 1.4;
}

p {
  font-size: 1rem;
  line-height: 1.6;
}

@layer components {
  button {
    @apply cursor-pointer;
  }
  
  .btn-primary {
    @apply inline-block rounded-lg bg-maroon px-3 md:px-5 py-2 text-base font-medium text-white;
  }

  .btn-secondary {
    @apply inline-block rounded-lg border border-maroon px-3 md:px-5 py-2 text-base font-medium text-maroon;
  }

  .eyebrow-headline {
    @apply mb-8 inline-block rounded-full border border-rust-red px-4 py-1 text-sm font-bold uppercase tracking-[.5em] text-rust-red;
  }
}

